generalize lambda input body

--- a/backend/aws/cloudformation/template.yaml
+++ b/backend/aws/cloudformation/template.yaml
@@ -282,16 +282,21 @@ Resources:
                   "required": true,
                   "schema": {"type": "string"}
                 },{
-                  "name": "x-api-code",
-                  "in": "header",
-                  "required": true,
-                  "schema": {"type": "string"}
-                },{
                   "name": "x-api-device",
                   "in": "header",
                   "required": true,
                   "schema": {"type": "string"}
                 }],
+                "requestBody": {
+                  "content": {
+                    "application/json": {
+                      "schema": {
+                        "$ref": "#/components/schemas/postBookId"
+                      }
+                    }
+                  },
+                  "required": true
+                },
                 "responses": {
                   "200": {
                     "description": "200 response",
@@ -986,6 +991,13 @@ Resources:
                 "symbol": {"type": "string"}
               },
               "required": ["name"]
+            },
+            "postBookId": {
+              "type": "object",
+              "properties": {
+                "code": {"type": "string"},
+              },
+              "required": ["code"]
             },
             "putBook": {
               "type": "object",
