export pdf feature

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,11 +29,13 @@
     "bignumber.js": "^9.1.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "html2canvas": "^1.4.1",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^6.1.8",
     "i18next-chained-backend": "^3.1.0",
     "i18next-http-backend": "^1.4.4",
     "i18next-localstorage-backend": "^4.1.0",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
