--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "react-router-dom": "^6.4.1",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
+    "tailwind-merge": "^1.14.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
