--- a/backend/aws/cloudformation/template.yaml
+++ b/backend/aws/cloudformation/template.yaml
@@ -1079,10 +1079,10 @@ Resources:
             "postBook": {
               "type": "object",
               "properties": {
-                "name": {"type": "string"},
-                "symbol": {"type": "string"}
+                "bookName": {"type": "string"},
+                "nickname": {"type": "string"}
               },
-              "required": ["name"]
+              "required": ["bookName"]
             },
             "putBook": {
               "type": "object",
