--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.6.15",
   "private": true,
   "scripts": {
-    "start": "cross-env BROWSER=none PORT=3000 react-scripts start",
+    "start": "cross-env WATCHPACK_POLLING=true BROWSER=none PORT=3000 react-scripts start",
     "build": "cross-env BUILD_PATH='./dist' react-scripts build",
     "test": "react-scripts test --coverage",
     "test:nowatch": "npm run test -- --watchAll=false",
@@ -90,6 +90,6 @@
   },
   "engines": {
     "node": "^18.0.0",
-    "npm": "^9.0.0"
+    "npm": ">=9.0.0"
   }
 }
