--- a/backend/aws/cloudformation/template.yaml
+++ b/backend/aws/cloudformation/template.yaml
@@ -1349,7 +1349,8 @@ Resources:
                     "required": ["id","method","amount"]
                   }
                 },
-                "memo": {"type": "string"}
+                "memo": {"type": "string"},
+                "currencyId": {"type": "string"}
               },
               "required": ["date","type","descr","amount","former","latter"]
             },
@@ -1386,7 +1387,8 @@ Resources:
                     "required": ["id","method","amount"]
                   }
                 },
-                "memo": {"type": "string"}
+                "memo": {"type": "string"},
+                "currencyId": {"type": "string"}
               },
               "required": ["date","type","descr","amount","former","latter"]
             },
@@ -1429,7 +1431,8 @@ Resources:
                 "amount": {"type": "number", "minimum": 0, "exclusiveMinimum": true},
                 "srcMemberId": {"type": "string"},
                 "dstMemberId": {"type": "string"},
-                "memo": {"type": "string"}
+                "memo": {"type": "string"},
+                "currencyId": {"type": "string"}
               },
               "required": ["date","amount","srcMemberId","dstMemberId"]
             },
@@ -1440,7 +1443,8 @@ Resources:
                 "amount": {"type": "number", "minimum": 0, "exclusiveMinimum": true},
                 "srcMemberId": {"type": "string"},
                 "dstMemberId": {"type": "string"},
-                "memo": {"type": "string"}
+                "memo": {"type": "string"},
+                "currencyId": {"type": "string"}
               },
               "required": ["date","amount","srcMemberId","dstMemberId"]
             },
