--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bignumber.js": "^9.1.0",
     "date-fns": "^2.29.3",
     "inversify": "^6.0.1",
