--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^2.29.3",
     "inversify": "^6.0.1",
     "pg": "^8.8.0",
+    "pg-native": "^3.1.0",
     "reflect-metadata": "^0.1.13",
     "tslib": "^2.4.1",
     "typeorm": "^0.3.7"
