--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1680.0",
     "axios": "^1.7.2",
     "bignumber.js": "^9.1.0",
     "date-fns": "^2.29.3",
@@ -29,13 +30,15 @@
     "pg-native": "^3.1.0",
     "reflect-metadata": "^0.1.13",
     "tslib": "^2.4.1",
-    "typeorm": "^0.3.7"
+    "typeorm": "^0.3.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.186",
     "@types/multer": "^1.4.7",
     "@types/pg": "^8.6.5",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "del-cli": "^4.0.1",
