--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,11 @@
     "compile": "ttsc",
     "test": "jest -c jest.config.js",
     "test:coverage": "npm run test -- --coverage --verbose",
-    "build": "webpack --config webpack.config.js",
+    "build:layer": "npm install --production && mkdir -p dist/nodejs && cp -R node_modules dist/nodejs",
+    "build:lambda": "npm install && ttsc",
     "pre:commit": "run-s lint test:coverage build",
     "pre:dev": "run-s fix test:coverage",
-    "pre:deploy": "run-s clean build",
-    "post:publish": "run-s clean compile && npm publish"
+    "pre:deploy": "run-s clean build:*"
   },
   "license": "ISC",
   "dependencies": {
@@ -26,6 +26,7 @@
     "bignumber.js": "^9.1.0",
     "date-fns": "^2.29.3",
     "inversify": "^6.0.1",
+    "lodash": "^4.17.21",
     "pg": "^8.8.0",
     "pg-native": "^3.1.0",
     "reflect-metadata": "^0.1.13",
