--- a/backend/package.json
+++ b/backend/package.json
@@ -50,16 +50,10 @@
     "multer": "^1.4.5-lts.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
-    "terser-webpack-plugin": "^5.3.1",
     "ts-jest": "^27.0.7",
-    "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
-    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "ttypescript": "^1.5.15",
     "typescript": "^4.6.2",
-    "typescript-transform-paths": "^3.3.1",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^5.0.1",
-    "zip-webpack-plugin": "^4.0.1"
+    "typescript-transform-paths": "^3.3.1"
   }
 }
