--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@y-celestial/spica-service",
-  "version": "1.4.3",
+  "name": "spica-backend",
+  "version": "1.4.4",
   "author": "Yue Chang",
   "scripts": {
     "lint:es": "eslint -c ./eslint.json src",
