--- a/backend/aws/cloudformation/template.yaml
+++ b/backend/aws/cloudformation/template.yaml
@@ -1908,6 +1908,7 @@ Resources:
       Role: !GetAtt ExecutionRole.Arn
       CodeUri: ../../lib/src
       MemorySize: 200
+      Timeout: 180
       Layers: [!Ref LambdaLayer]
       Environment:
         Variables:
@@ -1928,7 +1929,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Architectures: [arm64]
-      Handler: index.eventBridgebank
+      Handler: index.eventBridgeBank
       Runtime: nodejs18.x
       FunctionName: !Sub ${Project}-${TargetEnvr}-bank
       Role: !GetAtt ExecutionRole.Arn
