--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,12 +30,11 @@
     "bignumber.js": "^9.1.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
-    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.2",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^6.1.8",
     "i18next-chained-backend": "^3.1.0",
     "i18next-http-backend": "^1.4.4",
-    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
