--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     "bignumber.js": "^9.1.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
-    "html2pdf.js": "^0.10.2",
+    "html3pdf": "^0.12.2",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^6.1.8",
     "i18next-chained-backend": "^3.1.0",
