--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,11 @@
     "lint": "run-p lint:*",
     "fix": "run-s fix:*",
     "clean": "del-cli dist lib -f",
-    "compile": "ttsc",
+    "compile": "tspc",
     "test": "jest -c jest.config.js",
     "test:coverage": "npm run test -- --coverage --verbose",
     "build:layer": "npm install --production && mkdir -p dist/nodejs && cp -R node_modules dist/nodejs",
-    "build:lambda": "npm install && ttsc",
+    "build:lambda": "npm install && tspc",
     "pre:commit": "run-s lint test:coverage build",
     "pre:dev": "run-s fix test:coverage",
     "pre:deploy": "run-s clean build:*"
@@ -30,30 +30,29 @@
     "pg": "^8.8.0",
     "pg-native": "^3.1.0",
     "reflect-metadata": "^0.1.13",
-    "tslib": "^2.4.1",
+    "tslib": "^2.6.2",
     "typeorm": "^0.3.7",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2",
+    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.14.186",
-    "@types/multer": "^1.4.7",
+    "@types/node": "^24.0.3",
     "@types/pg": "^8.6.5",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
-    "del-cli": "^4.0.1",
-    "eslint": "^8.11.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.4",
-    "jest": "^27.3.1",
-    "multer": "^1.4.5-lts.1",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "del-cli": "^5.1.0",
+    "eslint": "^8.54.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.0",
+    "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.4.1",
-    "ts-jest": "^27.0.7",
-    "ts-node": "^10.4.0",
-    "ttypescript": "^1.5.15",
-    "typescript": "^4.6.2",
-    "typescript-transform-paths": "^3.3.1"
+    "prettier": "^3.1.0",
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.1",
+    "ts-patch": "^3.3.0",
+    "typescript": "^5.8.3",
+    "typescript-transform-paths": "^3.5.5"
   }
 }
