--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,7 +7,17 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check:lint": "eslint .",
+    "check:format": "prettier . --check",
+    "check": "run-s check:*",
+    "fix:lint": "eslint . --fix",
+    "fix:format": "prettier . --write",
+    "fix": "run-s fix:*",
+    "i18n-sync": "i18next-locales-sync -p en -s zh-CN zh-TW jp -l public/locale",
+    "clean": "del-cli dist -f",
+    "pre:commit": "npm run lint",
+    "pre:deploy": "run-s clean build"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -38,14 +48,21 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@tailwindcss/vite": "^4.1.10",
+    "@types/jest": "^30.0.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "del-cli": "^6.0.0",
     "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-import-resolver-typescript": "^4.3.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "tailwindcss": "^3.4.17",
+    "i18next-locales-sync": "^2.1.1",
+    "npm-run-all": "^4.1.5",
+    "prettier-plugin-tailwindcss": "^0.6.13",
+    "tailwindcss": "^4.1.10",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
